--- a/menu/templates/layout/footer.html
+++ b/menu/templates/layout/footer.html
@@ -10,7 +10,7 @@
                                    <h2 class="wow fadeInUp" data-wow-delay="0.2s">Trouvez-nous</h2>
                               </div>
                               <address class="wow fadeInUp" data-wow-delay="0.4s">
-                                   <p>,<br> Cau Giay, <br> Université Nationale du Vietnam, Hanoi
+                                   <p><br> Cau Giay, <br> Université Nationale du Vietnam, Hanoi
                                         144 Xuan Thuy, Hanoi</p>
                               </address>
                          </div>
