--- a/menu/templates/pages/index.html
+++ b/menu/templates/pages/index.html
@@ -101,16 +101,10 @@
                     </div>
 
                     <div class="wow fadeInUp">
-                        <p>African Food est né d'une passion. Le restaurant a ouvert ses portes  </br>
-                            cherchant à créer un lieu où les gens pouvaient non seulement déguster une cuisine exquise</br>
-                             mais aussi s'immerger dans une expérience culturelle riche. </br>
-                             African Food Restaurant est un lieu où chaque visiteur peut  sentir la chaleur de l'hospitalité africaine.</br>
-
-                        <p>Le restaurant a été décoré avec soin pour refléter la beauté des arts africains.
-                            Les murs sont ornés de peintures vibrantes, de sculptures élégantes 
-                            et de textiles colorés provenant de différents coins du continent. 
-                        </p>
-
+                        <p>African Food est né d'une passion et a ouvert ses portes  </br>
+                            cherchant à créer un lieu où les gens pouvaient </br>
+                              s'immerger dans une expérience culturelle riche. </br>
+                             African Food Restaurant est un lieu où chaque visiteur sent la chaleur de l'hospitalité africaine.</br>
                         <p>Nous avons hâte de vous accueillir et de vous faire vivre une expérience culinaire exceptionnelle. </br>
 
                             À très bientôt chez African Food !</br>
